Progess UI, AuthGuard, Dashboard Fix routes urls.py
